More sample changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
+<h1>This is the interview project</h1>
 <p>
-This is the interview project
+    This is a <strong>sample</strong>
 </p>
 </body>
 </html>
